# ppml-cpp

./: .gitignore  CMakeLists.txt  README.md  compile.sh
includes/: client.h  context.h  core.h  datasets.h  experiments.h  hemath.h  model.h  validation.h
logs/: ckks_identity_1.txt  ckks_identity_10.txt  ckks_identity_2.txt  ckks_identity_3.txt  ckks_identity_4.txt  ckks_identity_5.txt  ckks_identity_6.txt  ckks_identity_7.txt  ckks_identity_8.txt  ckks_identity_9.txt  ckks_sigmoid_1.txt  ckks_sigmoid_10.txt  ckks_sigmoid_2.txt  ckks_sigmoid_3.txt  ckks_sigmoid_4.txt  ckks_sigmoid_5.txt  ckks_sigmoid_6.txt  ckks_sigmoid_7.txt  ckks_sigmoid_8.txt  ckks_sigmoid_9.txt  ckks_tanh_1.txt  ckks_tanh_10.txt  ckks_tanh_11.txt  ckks_tanh_12.txt  ckks_tanh_13.txt  ckks_tanh_14.txt  ckks_tanh_15.txt  ckks_tanh_16.txt  ckks_tanh_17.txt  ckks_tanh_18.txt  ckks_tanh_19.txt  ckks_tanh_2.txt  ckks_tanh_20.txt  ckks_tanh_3.txt  ckks_tanh_4.txt  ckks_tanh_5.txt  ckks_tanh_6.txt  ckks_tanh_7.txt  ckks_tanh_8.txt  ckks_tanh_9.txt  (+35 more)
src/: BgvKnn.cpp  BgvLogisticRegression.cpp  CkksKnn.cpp  Draft.cpp  HermesMl.cpp  HermesMl.h  demo-simple-example.cpp  knn-encrypted.cpp
src/client/: Client.cpp
src/context/: HEContext.cpp  HEContextFactory.cpp
src/core/: BootstrapableCiphertext.cpp  EncryptedObject.cpp  Experiment.cpp  MinMaxScaler.cpp  Quantizer.cpp
src/datasets/: BreastCancerDataset.cpp  CirrhosisPatientDataset.cpp  CreditCardFraudDataset.cpp  Datasets.cpp  DiabetesDataset.cpp  DifferentiatedThyroidDataset.cpp  GliomaGradingDataset.cpp  LoanPredictionDataset.cpp
src/examples/: CkksBootstrapping.cpp  CkksLogisticRegression.cpp  CkksNeuralNetwork.cpp  CkksPerceptron.cpp
src/experiments/: CkksLogisticRegressionExperiment.cpp  CkksNeuralNetworkExperiment.cpp  CkksPerceptronExperiment.cpp
src/hemath/: Calculus.cpp  CalculusQuant.cpp  Constants.cpp
src/math/: Calculus.cpp  CalculusQuant.cpp  Constants.cpp
src/model/: BgvKnnEncrypted.cpp  CkksKnnEncrypted.cpp  CkksLogisticRegression.cpp  CkksNeuralNetwork.cpp  CkksPerceptron.cpp  LogisticRegressionEncrypted.cpp  MlModel.cpp
src/validation/: Holdout.cpp
